tests/snapshots/run_wpt_conformance__litert_log_float16_positive_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 69
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
log.https.any.js log float16 positive 4D tensor, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    logInput: f16[2, 2, 2, 3];
  }

  nodes {
    [logOutput] = log(logInput, label="");
  }

  outputs { logOutput; }
}
