tests/snapshots/run_wpt_conformance__litert_log_float32_positive_2D_tensor.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 57
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "log.https.any.js",
    "log float32 positive 2D tensor",
    "litert",
    "PASS",
)
