tests/snapshots/run_wpt_conformance__litert_logicalAnd_uint8_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "logical_and.https.any.js",
    "logicalAnd uint8 1D constant tensors",
    "litert",
    "PASS",
)
